@@ -1,4 +1,4 @@
-$Id: NEWS,v 1.936 2008-09-04 16:27:55 castaglia Exp $
+$Id: NEWS,v 1.937 2008-09-12 17:08:36 castaglia Exp $
 
 -----------------------------------------------------------------------------
   More details on the bugs listed below can be found by using the bug number
@@ -56,6 +56,7 @@ CVS
   now supports a FactsAdvertise directive; see doc/modules/mod_facts.html
   for details.
 - Bug 3109 - Errors with file uploads logged but not reported to clients.
+- Bug 3112 - Uploaded files are not removed if close() fails.
 
 1.3.2rc1 - Released 15-Apr-2008
 --------------------------------
